# Secure-Remove

./: .gitignore  Cargo.toml  README.md  build.ps1  build.sh  srm.cs  srm.csproj
.github/workflows/: build.yml
src/: constants.rs  main.rs
src/config/: constants.rs
src/shred/: delete_all.rs  delete_folder.rs  shred_file.rs
src/util/: delete_all.rs  delete_folder.rs  funcs.rs  mod.rs  shred_file.rs
