[package]
name = "secure_remove"
version = "2.2.2"
edition = "2021"
authors = ["Olivier Thornton <oli@simplemail.is>"]
description = "Securely remove files and directories"
readme = "README.md"
homepage = "https://github.com/saizo80/Secure-Remove/"
repository = "https://github.com/saizo80/Secure-Remove/"
license = "GPL-3.0-or-later"
keywords = ["secure", "remove", "delete", "shred", "file"]
categories = ["command-line-utilities"]


[[bin]]
name = "srm"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
